--- a/Theory/2.1预备知识-数据操作.md
+++ b/Theory/2.1预备知识-数据操作.md
@@ -18,9 +18,39 @@ x
 ```
 <tf.Tensor: shape=(12,), dtype=int32, numpy=array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11], dtype=int32)>
 ```
+
 查看 x 的形状
 ```python 
 x.shape
 # TensorShape([12])
 ```
 
+如果想知道张量中的元素总数，即形状的所有元素乘积，可以检查他的大小。
+```python 
+tf.size()
+# <tf.Tensor: shape=(), dtype=int32, numpy=12>
+```
+
+想更改张量的形状而不改变元素数量和元素值，可以用 reshape 函数。
+```python
+x = tf.reshape(x, (3,4))
+x
+'''
+ <tf.Tensor: shape=(3, 4), dtype=int32, numpy=
+array([[ 0,  1,  2,  3],
+       [ 4,  5,  6,  7],
+       [ 8,  9, 10, 11]], dtype=int32)>
+'''
+```
+
+也可以创建全0或者全1或者其他常量
+```python
+tf.zeros((2,3,4))
+tf.ones((2,3,4))
+tf.random.normal(shape=[3, 4]) # 已某种分布来进行随机采样
+```
+
+另一种方式就是通过 python 列表，最外层的列表对应于轴0，内层的列表对应轴1
+```python
+tf.constant([[2,1,4,3], [3,4,2,1], [4,5,2,1]])
+```
