--- a/Code/TF/2.预备知识.ipynb
+++ b/Code/TF/2.预备知识.ipynb
@@ -184,6 +184,255 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<tf.Tensor: shape=(2, 4), dtype=float32, numpy=\n",
+       " array([[ 3.,  4.,  6., 10.],\n",
+       "        [ 4.,  4.,  4.,  4.]], dtype=float32)>,\n",
+       " <tf.Tensor: shape=(2, 4), dtype=float32, numpy=\n",
+       " array([[-1.,  0.,  2.,  6.],\n",
+       "        [ 0.,  0.,  0.,  0.]], dtype=float32)>,\n",
+       " <tf.Tensor: shape=(2, 4), dtype=float32, numpy=\n",
+       " array([[ 2.,  4.,  8., 16.],\n",
+       "        [ 4.,  4.,  4.,  4.]], dtype=float32)>,\n",
+       " <tf.Tensor: shape=(2, 4), dtype=float32, numpy=\n",
+       " array([[0.5, 1. , 2. , 4. ],\n",
+       "        [1. , 1. , 1. , 1. ]], dtype=float32)>,\n",
+       " <tf.Tensor: shape=(2, 4), dtype=float32, numpy=\n",
+       " array([[ 1.,  4., 16., 64.],\n",
+       "        [ 4.,  4.,  4.,  4.]], dtype=float32)>)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = tf.constant([[1.0, 2, 4, 8],[2.0, 2, 2, 2]])\n",
+    "y = tf.constant([2.0, 2, 2, 2])\n",
+    "x + y, x - y, x * y, x / y, x ** y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(2, 4), dtype=float32, numpy=\n",
+       "array([[2.7182817e+00, 7.3890562e+00, 5.4598148e+01, 2.9809580e+03],\n",
+       "       [7.3890562e+00, 7.3890562e+00, 7.3890562e+00, 7.3890562e+00]],\n",
+       "      dtype=float32)>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.exp(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<tf.Tensor: shape=(6, 4), dtype=float32, numpy=\n",
+       " array([[ 0.,  1.,  2.,  3.],\n",
+       "        [ 4.,  5.,  6.,  7.],\n",
+       "        [ 8.,  9., 10., 11.],\n",
+       "        [ 2.,  1.,  4.,  3.],\n",
+       "        [ 1.,  2.,  3.,  4.],\n",
+       "        [ 3.,  4.,  2.,  1.]], dtype=float32)>,\n",
+       " <tf.Tensor: shape=(3, 8), dtype=float32, numpy=\n",
+       " array([[ 0.,  1.,  2.,  3.,  2.,  1.,  4.,  3.],\n",
+       "        [ 4.,  5.,  6.,  7.,  1.,  2.,  3.,  4.],\n",
+       "        [ 8.,  9., 10., 11.,  3.,  4.,  2.,  1.]], dtype=float32)>)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = tf.reshape(tf.range(12, dtype=tf.float32), (3,4))\n",
+    "y = tf.constant([[2.,1,4,3], [1,2,3,4], [3,4,2,1]])\n",
+    "tf.concat([x,y], axis=0),tf.concat([x,y], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(), dtype=float32, numpy=66.0>"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.reduce_sum(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(3, 2), dtype=int32, numpy=\n",
+       "array([[0, 1],\n",
+       "       [1, 2],\n",
+       "       [2, 3]])>"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = tf.reshape(tf.range(3), (3, 1))\n",
+    "b = tf.reshape(tf.range(2), (1, 2))\n",
+    "a+b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<tf.Tensor: shape=(4,), dtype=float32, numpy=array([ 8.,  9., 10., 11.], dtype=float32)>,\n",
+       " <tf.Tensor: shape=(2, 4), dtype=float32, numpy=\n",
+       " array([[ 4.,  5.,  6.,  7.],\n",
+       "        [ 8.,  9., 10., 11.]], dtype=float32)>)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[-1], x[1:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Variable 'Variable:0' shape=(3, 4) dtype=float32, numpy=\n",
+       "array([[ 0.,  1.,  2.,  3.],\n",
+       "       [ 4.,  5.,  9.,  7.],\n",
+       "       [ 8.,  9., 10., 11.]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_var = tf.Variable(x)\n",
+    "x_var[1,2].assign(9)\n",
+    "x_var"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "before = id(y)\n",
+    "y = y+x\n",
+    "id(y) == before"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1675017582152\n",
+      "1675017582152\n"
+     ]
+    }
+   ],
+   "source": [
+    "z = tf.Variable(tf.zeros_like(y))\n",
+    "print(id(z))\n",
+    "z.assign(x + y)\n",
+    "print(id(z))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(numpy.ndarray, tensorflow.python.framework.ops.EagerTensor)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = x.numpy()\n",
+    "b = tf.constant(a)\n",
+    "type(a), type(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
