--- a/Code/TF/2.预备知识.ipynb
+++ b/Code/TF/2.预备知识.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2 预备知识"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.1 数据曹祖"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -429,6 +445,279 @@
     "a = x.numpy()\n",
     "b = tf.constant(a)\n",
     "type(a), type(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.2 数据预处理"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.3 线性代数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(4,), dtype=int32, numpy=array([0, 1, 2, 3])>"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = tf.range(4)\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TensorShape([4])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(len(x))\n",
+    "x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(5, 4), dtype=int32, numpy=\n",
+       "array([[ 0,  1,  2,  3],\n",
+       "       [ 4,  5,  6,  7],\n",
+       "       [ 8,  9, 10, 11],\n",
+       "       [12, 13, 14, 15],\n",
+       "       [16, 17, 18, 19]])>"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = tf.reshape(tf.range(20), (5,4))\n",
+    "A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(5,), dtype=int32, numpy=array([ 0,  4,  8, 12, 16])>"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A[:,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(4,), dtype=int32, numpy=array([0, 1, 2, 3])>"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(4, 5), dtype=int32, numpy=\n",
+       "array([[ 0,  4,  8, 12, 16],\n",
+       "       [ 1,  5,  9, 13, 17],\n",
+       "       [ 2,  6, 10, 14, 18],\n",
+       "       [ 3,  7, 11, 15, 19]])>"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.transpose(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<tf.Tensor: shape=(5, 4), dtype=float32, numpy=\n",
+       " array([[ 0.,  1.,  2.,  3.],\n",
+       "        [ 4.,  5.,  6.,  7.],\n",
+       "        [ 8.,  9., 10., 11.],\n",
+       "        [12., 13., 14., 15.],\n",
+       "        [16., 17., 18., 19.]], dtype=float32)>,\n",
+       " <tf.Tensor: shape=(5, 4), dtype=float32, numpy=\n",
+       " array([[ 0.,  2.,  4.,  6.],\n",
+       "        [ 8., 10., 12., 14.],\n",
+       "        [16., 18., 20., 22.],\n",
+       "        [24., 26., 28., 30.],\n",
+       "        [32., 34., 36., 38.]], dtype=float32)>)"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = tf.reshape(tf.range(20, dtype=tf.float32), (5,4))\n",
+    "B = A\n",
+    "A, A+B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "id(A) == id(B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(5, 4), dtype=float32, numpy=\n",
+       "array([[  0.,   1.,   4.,   9.],\n",
+       "       [ 16.,  25.,  36.,  49.],\n",
+       "       [ 64.,  81., 100., 121.],\n",
+       "       [144., 169., 196., 225.],\n",
+       "       [256., 289., 324., 361.]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A * B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(5, 4), dtype=float32, numpy=\n",
+       "array([[ 2.,  3.,  4.,  5.],\n",
+       "       [ 6.,  7.,  8.,  9.],\n",
+       "       [10., 11., 12., 13.],\n",
+       "       [14., 15., 16., 17.],\n",
+       "       [18., 19., 20., 21.]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 2\n",
+    "A + a"
    ]
   },
   {
