--- a/Theory/2.3 预备知识-线性代数.md
+++ b/Theory/2.3 预备知识-线性代数.md
@@ -84,12 +84,7 @@ A, A+B
 这里 id(A) == id(B) 返回 True， 也就说明了不能通过分配新内存将 A 克隆 B
 
 两个矩阵的按元素乘积称为 Hadamard 积
-$$
-A\otimes B=\begin{bmatrix}a_{11}b_{11}\ ...\ a_{1n}b_{1n} \\ 
-a_{21}b_{21}\ ...\ a_{2n}b_{2n} \\
-...\ ...\ ...\ ...\\
-a_{m1}b_{m1}\ ... a_{mn}b_{mn}\end{bmatrix}
-$$
+$$A\otimes B=\begin{bmatrix}a_{11}b_{11}\ ...\ a_{1n}b_{1n} \\ a_{21}b_{21}\ ...\ a_{2n}b_{2n} \\...\ ...\ ...\ ...\\a_{m1}b_{m1}\ ... a_{mn}b_{mn}\end{bmatrix}$$
 ```python
 A * B
 # output
