--- a/Theory/2.3 预备知识-线性代数.md
+++ b/Theory/2.3 预备知识-线性代数.md
@@ -97,3 +97,117 @@ array([[  0.,   1.,   4.,   9.],
 ```
 
 将张量乘以或加上一个标量不会改变张量的形状，其中张量的每个元素都将与标量相加或相乘。
+
+## 2.3.6 降维
+我们可以对任意张量进行有用的操作是计算其元素之和。
+```python
+x = tf.range(4, dtype=tf.float32)
+x, tf.reduce_sum(x)
+```
+
+也可以对矩阵进行该操作
+```python
+A.shape, tf.reduce_sum(A)
+```
+
+在默认情况下，调用求和函数会沿所有轴降低张量的维度，使它变为一个矢量，我们还可以指定轴的方向进行计算，得到的仍是一个张量
+```text
+A = <tf.Tensor: shape=(5, 4), dtype=float32, numpy=
+    array([[ 0.,  1.,  2.,  3.],
+        [ 4.,  5.,  6.,  7.],
+        [ 8.,  9., 10., 11.],
+        [12., 13., 14., 15.],
+        [16., 17., 18., 19.]], dtype=float32)>
+```
+```python
+A_sum_axis0 = tf.reduce_sum(A, axis=0)
+A_sum_axis0, A.sum_axis0.shape
+# output
+(<tf.Tensor: shape=(4,), dtype=float32, numpy=array([40., 45., 50., 55.], dtype=float32)>,
+ TensorShape([4]))
+```
+同理，axis=1 是对列进行操作
+```
+<tf.Tensor: shape=(5,), dtype=float32, numpy=array([ 6., 22., 38., 54., 70.], dtype=float32)>
+```
+还可以同时按行和列进行操作(axis=[0, 1])，等同于tf.readuce_sum()
+
+### 2.3.6.1 非降维求和
+在调用函数来计算总和或者均值的时候保持轴数不变会非常有用
+```python
+sum_A = tf.reduce_sum(A, axis=1, keepdims=True)
+sum_A
+# output
+<tf.Tensor: shape=(5, 1), dtype=float32, numpy=
+array([[ 6.],
+       [22.],
+       [38.],
+       [54.],
+       [70.]], dtype=float32)>
+```
+例如，由于 sum_A 在每行进行求和后仍保持两个轴，我们可以通过广播将 A 除以 sum_A
+```python
+A / sum_A
+```
+
+可以计算 A 沿某个轴的累计总和，可以用如下方法
+```python
+tf.cumsum(A, axis=0)
+# output
+<tf.Tensor: shape=(5, 4), dtype=float32, numpy=
+array([[ 0.,  1.,  2.,  3.],
+       [ 4.,  6.,  8., 10.],
+       [12., 15., 18., 21.],
+       [24., 28., 32., 36.],
+       [40., 45., 50., 55.]], dtype=float32)>
+```
+
+## 2.3.7 点积（Dot porduct）
+上面介绍了按元素操作、求和和平均值。另一个基本操作就是点积——就是按位置元素乘积求和的结果
+```python
+y = tf.ones(4, dtype=tf.float32)
+x, y, tf.tensordot(x, y, axes=1)
+# output
+(<tf.Tensor: shape=(4,), dtype=int32, numpy=array([0, 1, 2, 3])>,
+ <tf.Tensor: shape=(4,), dtype=int32, numpy=array([1, 1, 1, 1])>,
+ <tf.Tensor: shape=(), dtype=int32, numpy=6>)
+ ```
+ 也可以直接用 tf.reduce_sum(x * y)
+
+## 2.3.8 矩阵-向量积
+用公式来表示就是$Ax=[A]x=[a_1^Tx, a_2^Tx,...,a_m^Tx]^T$
+```python
+x = tf.range(4, dtype=tf.float32)
+A.shape, x.shape, tf.linalg.matvec(A, x)
+# output
+(TensorShape([5, 4]),
+ TensorShape([4]),
+ <tf.Tensor: shape=(5,), dtype=float32, numpy=array([ 14.,  38.,  62.,  86., 110.], dtype=float32)>)
+```
+
+## 2.3.9 矩阵-矩阵乘法
+矩阵乘法其实就是第一个矩阵的行乘以第一个矩阵的列，作为结果矩阵的第一行第一列的值
+```python
+B = tf.ones((4,3), tf.float32)
+tf.matmul(A, B)
+# output 
+<tf.Tensor: shape=(5, 3), dtype=float32, numpy=
+array([[ 6.,  6.,  6.],
+       [22., 22., 22.],
+       [38., 38., 38.],
+       [54., 54., 54.],
+       [70., 70., 70.]], dtype=float32)>
+```
+
+## 2.3.10 范数
+线代里面有个运算符“范数”（norm）。非正式的说，向量的范数表示一个向量有多大——分量的大小
+范数的第一个性质是$f(\alpha x)=|\alpha|f(x)$
+范数的第二个性质是$f(x+y)\leq f(x)+f(y)$
+范数的第三个性质是$f(x) \geq 0$
+```python
+# L2范式
+u = tf.constant([3,-4])
+tf.norm(u)
+# L1范式
+tf.reduce_sum(tf.abs(u))
+```
