--- a/Code/TF/2.预备知识.ipynb
+++ b/Code/TF/2.预备知识.ipynb
@@ -722,6 +722,398 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(TensorShape([5, 4]), <tf.Tensor: shape=(), dtype=float32, numpy=190.0>)"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A.shape, tf.reduce_sum(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<tf.Tensor: shape=(4,), dtype=float32, numpy=array([40., 45., 50., 55.], dtype=float32)>,\n",
+       " TensorShape([4]))"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A_sum_axis0 = tf.reduce_sum(A, axis=0)\n",
+    "A_sum_axis0, A_sum_axis0.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(5,), dtype=float32, numpy=array([ 6., 22., 38., 54., 70.], dtype=float32)>"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.reduce_sum(A, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(5, 4), dtype=float32, numpy=\n",
+       "array([[ 0.,  1.,  2.,  3.],\n",
+       "       [ 4.,  5.,  6.,  7.],\n",
+       "       [ 8.,  9., 10., 11.],\n",
+       "       [12., 13., 14., 15.],\n",
+       "       [16., 17., 18., 19.]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(5, 1), dtype=float32, numpy=\n",
+       "array([[ 6.],\n",
+       "       [22.],\n",
+       "       [38.],\n",
+       "       [54.],\n",
+       "       [70.]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum_A = tf.reduce_sum(A, axis=1, keepdims=True)\n",
+    "sum_A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(5, 4), dtype=float32, numpy=\n",
+       "array([[0.        , 0.16666667, 0.33333334, 0.5       ],\n",
+       "       [0.18181819, 0.22727273, 0.27272728, 0.3181818 ],\n",
+       "       [0.21052632, 0.23684211, 0.2631579 , 0.28947368],\n",
+       "       [0.22222222, 0.24074075, 0.25925925, 0.2777778 ],\n",
+       "       [0.22857143, 0.24285714, 0.25714287, 0.27142859]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A / sum_A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(5, 4), dtype=float32, numpy=\n",
+       "array([[0.        , 0.02222222, 0.04      , 0.05454545],\n",
+       "       [0.1       , 0.11111111, 0.12      , 0.12727273],\n",
+       "       [0.2       , 0.2       , 0.2       , 0.2       ],\n",
+       "       [0.3       , 0.2888889 , 0.28      , 0.27272728],\n",
+       "       [0.4       , 0.37777779, 0.36      , 0.34545454]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A / A_sum_axis0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(5, 4), dtype=float32, numpy=\n",
+       "array([[ 0.,  1.,  2.,  3.],\n",
+       "       [ 4.,  6.,  8., 10.],\n",
+       "       [12., 15., 18., 21.],\n",
+       "       [24., 28., 32., 36.],\n",
+       "       [40., 45., 50., 55.]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.cumsum(A, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(5, 4), dtype=float32, numpy=\n",
+       "array([[ 0.,  1.,  3.,  6.],\n",
+       "       [ 4.,  9., 15., 22.],\n",
+       "       [ 8., 17., 27., 38.],\n",
+       "       [12., 25., 39., 54.],\n",
+       "       [16., 33., 51., 70.]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.cumsum(A, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<tf.Tensor: shape=(4,), dtype=int32, numpy=array([0, 1, 2, 3])>,\n",
+       " <tf.Tensor: shape=(4,), dtype=int32, numpy=array([1, 1, 1, 1])>,\n",
+       " <tf.Tensor: shape=(), dtype=int32, numpy=6>)"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y = tf.ones(4, dtype=tf.int32)\n",
+    "x, y, tf.tensordot(x, y, axes=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(4,), dtype=int32, numpy=array([0, 1, 2, 3])>"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(4,), dtype=int32, numpy=array([0, 1, 2, 3])>"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x*y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(TensorShape([5, 4]),\n",
+       " TensorShape([4]),\n",
+       " <tf.Tensor: shape=(5,), dtype=float32, numpy=array([ 14.,  38.,  62.,  86., 110.], dtype=float32)>)"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = tf.range(4, dtype=tf.float32)\n",
+    "A.shape, x.shape, tf.linalg.matvec(A, x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<tf.Tensor: shape=(4,), dtype=float32, numpy=array([0., 1., 2., 3.], dtype=float32)>,\n",
+       " <tf.Tensor: shape=(5, 4), dtype=float32, numpy=\n",
+       " array([[ 0.,  1.,  2.,  3.],\n",
+       "        [ 4.,  5.,  6.,  7.],\n",
+       "        [ 8.,  9., 10., 11.],\n",
+       "        [12., 13., 14., 15.],\n",
+       "        [16., 17., 18., 19.]], dtype=float32)>)"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x, A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(5, 3), dtype=float32, numpy=\n",
+       "array([[ 6.,  6.,  6.],\n",
+       "       [22., 22., 22.],\n",
+       "       [38., 38., 38.],\n",
+       "       [54., 54., 54.],\n",
+       "       [70., 70., 70.]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "B = tf.ones((4,3), tf.float32)\n",
+    "tf.matmul(A, B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(), dtype=float32, numpy=5.0>"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "u = tf.constant([3.0,-4])\n",
+    "tf.norm(u)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(), dtype=float32, numpy=7.0>"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.reduce_sum(tf.abs(u))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
