--- a/Theory/2.3 预备知识-线性代数.md
+++ b/Theory/2.3 预备知识-线性代数.md
@@ -201,9 +201,9 @@ array([[ 6.,  6.,  6.],
 
 ## 2.3.10 范数
 线代里面有个运算符“范数”（norm）。非正式的说，向量的范数表示一个向量有多大——分量的大小
-范数的第一个性质是$f(\alpha x)=|\alpha|f(x)$
-范数的第二个性质是$f(x+y)\leq f(x)+f(y)$
-范数的第三个性质是$f(x) \geq 0$
+范数的第一个性质是$f(\alpha\ x)=|\alpha|f(x)$
+范数的第二个性质是$f(x+y)\leq\ f(x)+f(y)$
+范数的第三个性质是$f(x)\ \geq 0$
 ```python
 # L2范式
 u = tf.constant([3,-4])
