--- a/Theory/2.5 预备知识-自动微分.md
+++ b/Theory/2.5 预备知识-自动微分.md
@@ -4,7 +4,7 @@
 
 ## 2.5.1 一个简单的例子
 对函数 $y=2x^Tx$ 关于列向量 x 求导。首先创建 x 并分配初始值
-'''python
+```python
 import tensorflow as tf
 x = tf.range(4, dtype=tf.float32)
 # output
