--- a/Theory/3.1 线性神经网络-线性回归.md
+++ b/Theory/3.1 线性神经网络-线性回归.md
@@ -11,7 +11,7 @@
  $price=w_{area}·area+w_{age}·age+b$ 
 其中 w 称为权重，权重决定了每个特征对我们预测值的影响。b 表示偏置，偏置代表所有特征都为 0 的时候，预测值应该为多少。更深层一点说是为了提高模型的表达能力。
 
-机器学习中，我们特征长使用高维， $y_hat = w_1x_1+w_2x_2+...+w_dx_d+b$ ，简洁表示就是 $y_hat = W^TX+b$ 
+机器学习中，我们特征长使用高维， $y_{hat} = w_1x_1+w_2x_2+...+w_dx_d+b$ ，简洁表示就是 $y_{hat} = W^TX+b$ 
 这里给定 X 和 Y 之后，线性回归的目标是寻找到一组权重向量 w 和 b，使得给定新的 X 的时候，预测的 y 尽可能少出现误差。
 
 寻找最优的模型参数需要两个东西
@@ -19,7 +19,7 @@
 + 一个能使模型更新以提升模型预测质量的方法
 
 ### 3.1.1.2 损失函数
-损失函数就是模型拟合度量，量化目标的实际值和预测值之间的差距。通常选择非负的作为损失，数值越小，损失越小，模型越优。回归问题常用的损失函数是平方误差函数，公式如下： $l^{(i)}_{w,b}=\frac{1}{2}(y_hat^{(i)}-y^{(i)})^2$ 
+损失函数就是模型拟合度量，量化目标的实际值和预测值之间的差距。通常选择非负的作为损失，数值越小，损失越小，模型越优。回归问题常用的损失函数是平方误差函数，公式如下： $l^{(i)}_{w,b}=\frac{1}{2}(y_{hat}^{(i)}-y^{(i)})^2$ 
 上面损失函数中，估计值和观测值之间较大的差异导致更大的损失。为了度量模型在整个数据集上质量，我们需要计算在训练 n 个样本上的损失值： $L(w,b)=\frac{1}{n}\sum_{i=1}^n{l^{(i)}_{w,b}}$
 在训练模型的时候，我们希望寻找一组参数 $(w^*, b^*)$ ， 这组参数能最小化所有样本的总损失。
  $w^*,b^*=argmin_{w,b}L(w,b)$ 
@@ -99,4 +99,4 @@ d2l.plot(x, [normal(x, mu, sigma) for mu, sigma in params], xlabel='x', ylabel='
 ```
 改变均值会产生沿轴的偏移，增加方差将会分散分布、降低其峰值。
 均方误差损失函数可以用于回归的一个原因是：我们假设了观测中包含噪声，其中噪声服从正态分布。噪声正态分布如下： $y=w^Tx+b+\epsilon$ 其中 $\epsilon ~ N(0, \sigma^2)$.
-因此我们可以写出通过给定 x 观测到特定 y 的似然：$p(y|X)=\frac{1}{\sqrt{2\omicron\sigma^2}}exp(-\frac{1}{2\sigma^2}(y-w^Tx-b)^2)$
+因此我们可以写出通过给定 x 观测到特定 y 的似然：$p(y|X)=\frac{1}{\sqrt{2\omicron \sigma^2}}exp(-\frac{1}{2 \sigma^2}(y-w^Tx-b)^2)$ 
