--- a/Code/TF/3.线性神经网络.ipynb
+++ b/Code/TF/3.线性神经网络.ipynb
@@ -370,6 +370,199 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3.3 线性回归的简洁实现"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "from d2l import tensorflow as d2l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 生成数据集\n",
+    "true_w = tf.constant([2, -3.4])\n",
+    "true_b = 4.2\n",
+    "features, labels = d2l.synthetic_data(true_w, true_b, num_examples=1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 读取数据集\n",
+    "def load_array(data_arrays, batch_size, is_train=True):\n",
+    "    '''构造迭代器\n",
+    "    is_train:是否在每个迭代周期将数据打乱\n",
+    "    '''\n",
+    "    dataset = tf.data.Dataset.from_tensor_slices(data_arrays)\n",
+    "    if is_train:\n",
+    "        dataset = dataset.shuffle(buffer_size=1000)\n",
+    "    dataset  = dataset.batch(batch_size)\n",
+    "    return dataset\n",
+    "batch_size = 10\n",
+    "data_iter = load_array((features,labels), batch_size=batch_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<tf.Tensor: shape=(10, 2), dtype=float32, numpy=\n",
+       " array([[ 0.65877414,  0.05396835],\n",
+       "        [ 1.0527794 ,  1.1842372 ],\n",
+       "        [-0.34128618,  1.0428398 ],\n",
+       "        [ 1.4212224 , -0.16353802],\n",
+       "        [ 1.6201181 ,  0.83234847],\n",
+       "        [-1.4098719 , -1.2916749 ],\n",
+       "        [ 0.38838902,  2.0162525 ],\n",
+       "        [-0.54976207, -0.01538601],\n",
+       "        [-2.2728183 , -0.42852902],\n",
+       "        [-1.0607196 , -1.4246807 ]], dtype=float32)>,\n",
+       " <tf.Tensor: shape=(10, 1), dtype=float32, numpy=\n",
+       " array([[ 5.3427534],\n",
+       "        [ 2.275214 ],\n",
+       "        [-0.0271338],\n",
+       "        [ 7.593068 ],\n",
+       "        [ 4.6276064],\n",
+       "        [ 5.7685966],\n",
+       "        [-1.8690455],\n",
+       "        [ 3.156852 ],\n",
+       "        [ 1.1005776],\n",
+       "        [ 6.9249773]], dtype=float32)>)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "next(iter(data_iter))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 定义模型\n",
+    "initializer = tf.initializers.RandomNormal(stddev=0.01)\n",
+    "net = tf.keras.Sequential()\n",
+    "net.add(tf.keras.layers.Dense(1, kernel_initializer=initializer))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 定义损失函数 loss\n",
+    "loss = tf.keras.losses.MeanSquaredError()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 定义优化算法\n",
+    "trainer = tf.keras.optimizers.SGD(learning_rate=0.03)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch: 1, loss: 0.000311\n",
+      "epoch: 2, loss: 0.000103\n",
+      "epoch: 3, loss: 0.000102\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 训练\n",
+    "num_epochs = 3\n",
+    "for epoch in range(num_epochs):\n",
+    "    for x,y in data_iter:\n",
+    "        with tf.GradientTape() as tape:\n",
+    "            l = loss(net(x, training=True), y)\n",
+    "        grads = tape.gradient(l, net.trainable_variables)\n",
+    "        trainer.apply_gradients(zip(grads, net.trainable_variables))\n",
+    "    l = loss(net(features), labels)\n",
+    "    print(f'epoch: {epoch+1}, loss: {l:f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "w的估计误差： tf.Tensor([-3.092289e-04  8.368492e-05], shape=(2,), dtype=float32)\n",
+      "b的估计误差： [0.00082874]\n"
+     ]
+    }
+   ],
+   "source": [
+    "w = net.get_weights()[0]\n",
+    "print('w的估计误差：', true_w - tf.reshape(w, true_w.shape))\n",
+    "b = net.get_weights()[1]\n",
+    "print('b的估计误差：', true_b - b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4.199171], dtype=float32)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
